@@ -159,6 +159,8 @@ UI_EN = {
     UI_trait_leadfootdesc = "You've always had a heavy step and now it's time to put your foot down - on some zombies.<br>Your stomps are considerably more powerful.",
     UI_trait_glassbody = "Made of Glass",
     UI_trait_glassbodydesc = "You're particularly vulnerable and frail.<br>You take twice as much damage from all sources.<br>You become easily scratched from minor injuries.<br>Even a short fall or moderate damage can result in a broken bone.<br>Heavy Encumberance can result in severe damage.",
+    UI_trait_mundane = "Mundane",
+    UI_trait_mundanedesc = "Your weapon attacks will never critically hit.<br>This includes any critical bonuses from traits such as Prowess.<br>Any other damage bonuses still apply properly.",
     UI_MoreTraits_Options_ScroungerAnnounce = "Announce Scrounger and Incomprehensive",
     UI_MoreTraits_Options_ScroungerAnnounce_ToolTip = "If you have the Scrounger or Incomprehensive trait, you will be notified if item(s) are found or lost.",
     UI_MoreTraits_Options_ScroungerHighlight = "Highlight Scrounger Containers",
