@@ -22,3 +22,5 @@ Reduce cost of Super-Immune from 10 to 8 points, since people consistently point
 Increase buffer for Specialization traits to prevent underflow xp.
 Fix Grave Robber loot table range not actually being able to roll a 100.
 Nerf Human Meat.
+Add new trait: Mundane
+Adjusted costs of some traits.
